# tygodnik-sejmowy

./: .eas_build_final.json  .env.example  .gitignore  .mcp.json  .watch_eas.ps1  AGENTS.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  frontend-image.yml  python-release.yml
deploy/mixvm/: Dockerfile.supagraf  docker-compose.cloudflared.yml  docker-compose.frontend.prod.yml  docker-compose.frontend.yml  docker-compose.yml
docs/: PLAN.md  backfill_run_2026-05-12.md  embedding_eval_2026-05-12.md  getting-started.md  v1-skeleton-findings.md
frontend/: .dockerignore  Dockerfile  next.config.ts  package.json  pnpm-lock.yaml
frontend/app/: error.tsx  globals.css  layout.tsx  not-found.tsx  opengraph-image.tsx  page.tsx  robots.ts  sitemap.ts
frontend/docs/: analytics-events.md
frontend/lib/: analytics-events.ts  analytics.ts  embed.ts  events-types.ts  isap.ts  labels.ts  patronite.ts  personas.ts  posel-tab-page-size.ts  proces-classify.ts  process-status.ts  profile.tsx  promiseAlignment.ts  rss.ts  speechExcerpt.ts  stages.ts  supabase.ts  timeline-events.ts  topic-persona-map.ts  topics.ts  transcript-annotate.ts
frontend/scripts/: fetch_club_logos.mjs  test_bill_outcome.mjs  test_voting_stages_prediction.mjs
mobile/: .env.example  README.md  app.config.ts  eas.json  package-lock.json  package.json  theme.ts
mobile/app/: _layout.tsx  index.tsx  onboarding.tsx  posel.tsx  preferencje.tsx
mobile/components/: BottomTabs.tsx  EliCard.tsx  Markdown.tsx  (+11 more)
scripts/: apply_migrations_new_db.py  build_okregi_shapes.py  dump_llm_example.py  load_via_psql.py  load_votes_only.py  parallel_enrich_prints.py  reembed_qwen.sql  ssh_inspect_vm.py
supagraf/: __init__.py  __main__.py  cli.py  db.py
(+616 files in other folders)
