[project]
name = "supagraf"
version = "0.1.0"
description = "Tygodnik Sejmowy — Supabase-backed pipeline + Next.js frontend for Polish Sejm legislative data."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "PolyForm-Noncommercial-1.0.0" }
authors = [{ name = "miskibin" }]
urls = { Repository = "https://github.com/miskibin/tygodnik-sejmowy" }
dependencies = [
    "httpx>=0.27.2",
    "pydantic>=2.7.4",
    "loguru>=0.7.2",
    "supabase>=2.11.0",
    "typer>=0.17.4",
    "tqdm>=4.67.1",
    "tenacity>=9.0.0",
    "aiofiles>=24.1.0",
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "pypdf>=6.10.2",
    "google-genai>=1.75.0",
    "pymupdf>=1.27.2.3",
    "python-docx>=1.2.0",
    "pytesseract>=0.3.13",
    "pymupdf4llm>=1.27.2.3",
    "onnxruntime<1.24",
    "beautifulsoup4>=4.14.3",
    "lxml>=6.1.0",
]

# Paddle is the legacy heavy OCR backend, kept as an optional install.
# Activate with `uv sync --extra paddle` if you need SUPAGRAF_PDF_BACKEND=paddle.
# pdf.py imports paddleocr lazily so missing paddle does not break the default
# pymupdf+tesseract path.
[project.optional-dependencies]
paddle = [
    "paddlepaddle-gpu>=3.3.1",
    "paddleocr>=3.5.0",
    "paddlex[ocr]==3.5.1",
]

# cu130 wheel ships sm_120 (Blackwell) kernels — required for RTX 50-series.
# cu126 wheel fails with cudaErrorNoKernelImageForDevice on these GPUs.
[[tool.uv.index]]
name = "paddlepaddle-cu130"
url = "https://www.paddlepaddle.org.cn/packages/stable/cu130/"
explicit = true

[tool.uv.sources]
paddlepaddle-gpu = { index = "paddlepaddle-cu130" }

[tool.setuptools.packages.find]
include = ["supagraf*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
